<resources>
    <string name="app_name">Hewan Pedia By JO</string>
    <string name="biodata">BIODATA</string>
    <string name="hewan">Hewan Pedia by Johan</string>
    <string name="buka">(Tekan gambar barang untuk membuka galeri)</string>
    <string name="bio">BIODATA</string>
    <string name="burung">Ras Hantu</string>
    <string name="jenis">Jenis Hewan</string>
    <string name="asal">Asal</string>
    <string name="hantu">burung hantu</string>
    <string name="indo">indonesia</string>
    <string name="br">Brithis shorthair</string>
    <string name="in">inggris</string>
    <string name="we">\" Berasal dari inggris dengan ciri khas berbulu pendek keabu abuan  dan lembut\"</string>
    <string name="mi">\"Mine coon \"</string>
    <string name="am">Amerika</string>
    <string name="sd">Mine coon adalah salah satu ras kucing tertua dan alami yang berasal dari maine, amerika</string>
    <string name="fa">Siam</string>
    <string name="tha">Thailand</string>
    <string name="ga">Kucing siam adalah salah satu ras kucing pertama diakui jelas sebagai kucing berjeis oriental</string>
    <string name="de">Celepuk</string>
    <string name="wer">Indonesia</string>
    <string name="ce">Burung hantu jenis ini mempunyai tubuh yang kescil</string>
    <string name="vaa">Snowy owl</string>
    <string name="yo">\"Alaska,Siberia,Finlandia (daerah bersalju) \"</string>
    <string name="tab">Burung hantu jenis ini mempunyai bulu berwarna putih dan hidup didaerah bersalju hingga dijuluki  snowy olw</string>
    <string name="hy">Eruasia eagle owl</string>
    <string name="tyu">Inggris</string>
    <string name="po">\"Burung hantu jenis ini mempunyai ciri khas unik pada matanya \"</string>
    <string name="wede">King kobra</string>
    <string name="za">Banyak dijumpai pada hampir seluruh dunia terutama daerah tropis</string>
    <string name="yutb">Ular jenis ini mengandung cukup racun untuk menyebabkan bahaya atau kematian pada manusia.</string>
    <string name="oi">\"Piton \"</string>
    <string name="outy">Banyak dijumpai di daerah tropis</string>
    <string name="poe">Walaupun ular ini tidak termasuk ular berbisa namun gigitan serta lilitannya dapat membunuh manusia mengunakan  tubuh nya yang besar serta gigitan yag kuat</string>
    <string name="qwrt">\"Ular hijau \"</string>
    <string name="qwsa">Hidup didaerah tropis</string>
    <string name="qwdr">Ular ini memiliki karakteristik berwarna hijau hingga dijuluki ular hijau, tapi tidak semua ular hijau itu berbahaya .contohnya ular pucuk dan bajing</string>
    <string name="qwsz">Kepik Pembajak</string>
    <string name="qwda">Nama Hemiptera berasal dari bahasa Yunani hemi</string>
    <string name="qwcr">Dikutip dari Iowa State University, serangga ini akan mengonsumsi berbagai jenis telur dari hama pengganggu yang menempel pada daun di tanaman.</string>
    <string name="qwmu">lebah madu</string>
    <string name="oiv">dari kawasan Laut Tengah (Afrika Utara, Eropa selatan dan Asia Kecil)</string>
    <string name="pmn">Lebah adalah salah satu serangga yang sangat bermanfaat bagi kehidupan manusia. Lebah merupakan serangga yang membantu bunga dan tanaman lain dalam proses penyerbukan agar tanaman bisa tumbuh dan berkembang dengan mudahnya.</string>
    <string name="bnm">\"laba laba \"</string>
    <string name="vfr">Arachnida.</string>
    <string name="crf">Laba-laba merupakan salah satu serangga yang ampuh untuk membasmi berbagai serangga yang mengganggu lainnya.</string>
    <string name="nama">NAMA : M. JOHAN WAHYUDI\n ALAMAT : PENGADANGAN \n HOBI : NAIK GUNUNG\n NIM : 200602015\n PRODI : TEKNIK INFORMATIKA</string>
    <string name="iya">Deskripsi hewan</string>
    <string name="er">Daftar Ras Hewan</string>
    <string name="awed">DAFTAR BERBAGAI RAS</string>
    <string name="pol">Kucing</string>
    <string name="poll">Hantu</string>
    <string name="polll">Ular</string>
    <string name="pollll">Serangga</string>
</resources>