<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/burung"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="19sp"
        android:layout_marginBottom="24dp"
        />

    <ImageView
        android:id="@+id/gambarHewan"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/snowy_owl_by_cycoze"
        android:scaleType="fitCenter"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:id="@+id/txJenis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        />
    <TextView
        android:id="@+id/txRas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/txAsal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asal"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/txDeskripsi"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/iya" />

    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >


    </LinearLayout>
</LinearLayout>