<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/bacsinga"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/hewan"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_buka_ras_kucing"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:scaleType="center"
            android:src="@drawable/kucing_mine_coon" />
        <ImageButton
            android:id="@+id/btn_buka_ras_hantu"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:scaleType="center"
            android:src="@drawable/snowy_owl_by_cycoze" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_buka_ras_ular"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:scaleType="center"
            android:src="@drawable/kobra" />

        <ImageButton
            android:id="@+id/btn_buka_ras_serangga"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:scaleType="center"
            android:src="@drawable/serangga1" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textColor="@color/white"
        android:text="@string/buka"
        android:textStyle="italic" />

    <Button
        android:layout_width="189dp"
        android:layout_height="72dp"
        android:text="@string/bio"
        android:onClick="Pindah"/>

</LinearLayout>